--- a/readme/history.txt
+++ b/readme/history.txt
@@ -1,7 +1,7 @@
 2024.06.07 (by Alexey T.)
 + add: option "hover_with_ctrl"
 - fix: plugin can bring app to foreground after switching to another app
-- fix: function-signature hint must have the same font-size as editor
+- fix: function-signature hint must have the same font-size as editor even if editor is zoomed in/out
 - fix: Qt5: first showing of function-signature hint has too small size
 
 2024.03.01 (by @DUOLabs333)
