--- a/readme/history.txt
+++ b/readme/history.txt
@@ -1,3 +1,6 @@
+2025.11.04
+- fix: auto-completion did not work in 'splitted' editor ie shown by "Split / Split tab horizontally" menu item (by @badrelmers)
+
 2025.10.31
 - fix: if LSP plugin's log-panel had only warning lines without note lines (or only note lines without warning lines?), dbl-click on log line could not open the filename in editor (by @badrelmers)
 
