--- a/readme/history.txt
+++ b/readme/history.txt
@@ -1,12 +1,16 @@
-2025.11.07
-+ add: auto-completion listbox now shows 'deprecated' autocompletion items (e.g. with TypeScript server) with grayed+crossed font (by @badrelmers)
-- fix: auto-completion did not work in 'splitted' editor ie shown by "Split / Split tab horizontally" menu item (by @badrelmers)
+2025.11.09 (by @badrelmers)
++ add: support 'fuzzy matching' in LSP auto-completion list
+- fix: don't treat Python-LSP server items as 'deprecated' wrongly
 
-2025.10.31
-- fix: if LSP plugin's log-panel had only warning lines without note lines (or only note lines without warning lines?), dbl-click on log line could not open the filename in editor (by @badrelmers)
+2025.11.07 (by @badrelmers)
++ add: auto-completion listbox now shows 'deprecated' autocompletion items (e.g. with TypeScript server) with grayed+crossed font
+- fix: auto-completion did not work in 'splitted' editor ie shown by "Split / Split tab horizontally" menu item
 
-2025.10.01
-+ add: support non-standard LSP extention of C# server (OmniSharp), which resolves "Go to defition" command there (by @badrelmers)
+2025.10.31 (by @badrelmers)
+- fix: if LSP plugin's log-panel had only warning lines without note lines (or only note lines without warning lines?), dbl-click on log line could not open the filename in editor
+
+2025.10.01 (by @badrelmers)
++ add: support non-standard LSP extention of C# server (OmniSharp), which resolves "Go to defition" command there
 
 2024.12.22
 * change: reworked sidebar icon 'LSP' to match standard icons colors (by Markus F.)
